<resources>
    <string name="app_name" translatable="false">Criptoactivo</string>
    <string name="send_text">Send</string>
    <string name="recents_text">Last transactions</string>
    <string name="received_text">Received</string>
    <string name="sent_text">Sent</string>
    <string name="notify_receive_pending">You have receive %s uncommited</string>
    <string name="notify_receive_completed">You have receive %1$s committed in block %2$s</string>
    <string name="notify_receive">You have receive %s</string>
    <string name="nofity_send">You have send %s</string>
    <string name="recipient_address_text">Recipient address</string>
    <string name="regular_fee_text">Regular</string>
    <string name="priority_fee_text">Priority</string>
    <string name="balance_sample_text" translatable="false">1.0000 BTC</string>
    <string name="empty_recents_text">No transactions yet</string>
    <string name="cryptocurrency_sample_text" translatable="false">Bitcoin</string>
    <string name="operation_kind_sample">Received</string>
    <string name="status_sample_symbol_text">(UC)</string>
    <string name="datetime_sample_text">today @ 08:00 AM</string>
    <string name="amount_sample_text" translatable="false">20.99M BTC</string>
    <string name="today_text">today</string>
    <string name="yesterday_text">yesterday</string>
    <string name="qr_reader_indications">Place a QR Code</string>
    <string name="no_enought_funds_error">No enought funds</string>
    <string name="qr_receive_description">QR code used to send payments</string>
    <string name="backup_text">Backup</string>
    <string name="indications_restore_text">The next 12 words guarantees access to your funds from any other wallet. Keep this information secure by writing it down on a piece of paper.</string>
    <string name="next_word_text">Next</string>
    <string name="start_word_text">Start</string>
    <string name="test_words">Test</string>
    <string name="testing_word_text">Enter the word %d</string>
    <string name="error_word">Invalid word</string>
    <string name="backup_funds_title">Backup</string>
    <string name="error_12_words">Verify your 12 words</string>
    <string name="darkMode">Dark</string>
    <string name="lightMode">Light</string>
    <string name="general_title_setting">General</string>
    <string name="about_text">About</string>
    <string name="security_title_setting">Security</string>
    <string name="change_pin_setting">Change PIN</string>
    <string name="biometric_setting">Use biometric</string>
    <string name="version_text">Version</string>
    <string name="confirm_pin_text">Confirm your PIN</string>
    <string name="not_match_pin_error">Wrong PIN</string>
    <string name="authenticate_title">Authentication</string>
    <string name="transaction_title">Transaction</string>
    <string name="datetime_text">Timestamp</string>
    <string name="confirmations_text">Confirmations</string>
    <string name="fail_to_delete_error">Couldn\'t delete the wallet</string>
    <string name="unknown_version">Unknown Version</string>
    <string name="address_title">Addresses</string>
    <string name="blueMode">Blue</string>
    <string name="usd_fiat" translatable="false">USD</string>
    <string name="mxn_fiat" translatable="false">MXN</string>
    <string name="theme_setting_title">Theme</string>
    <string name="currency_setting_title">Currency</string>
    <string name="immediately_text">Immediately</string>
    <string name="timeout_lock_setting_title">Wait Time</string>
    <string name="time_seconds_pattern_text">%d sec</string>
    <string name="time_minute_pattern_text" translatable="false">%d min</string>
    <string name="disable_text">Disable</string>
    <string name="biometric_summary">Enable if you want to use the fingerprint to unlock wallet</string>
    <string name="timeout_lock_summary">Set the time you wait to block the wallet</string>
    <string name="wrong_word_error">Wrong words: %s</string>
    <string name="fiat_sample_text" translatable="false">≈ $ 0.00 USD</string>
    <string name="unknown_data_text">(Unavailable data)</string>
    <string name="two_factor_summary">Two-factor authentication adds an additional layer of security to the send payments process</string>
    <string name="two_factor_setting_title">Use 2FA</string>
    <string name="language_setting_title">Language</string>
    <string name="english_text" translatable="false">English</string>
    <string name="spanish_text" translatable="false">Español</string>
    <string name="no_language_text">No language</string>
    <string name="code_hint">Code</string>
    <string name="send_2fa_caption">Code 2FA</string>
    <string name="transferred_text">Moved</string>
    <string name="copyright" translatable="false">Criptoactivo © 2020</string>
    <string name="enter_pin">Please enter your PIN to unlock</string>
    <string name="new_pin">Please enter a new PIN</string>
    <string name="create_caption_button">Create</string>
    <string name="restore_caption_button">Restore</string>
    <string name="welcome_text">Welcome</string>
    <string name="welcome_second_line_text">to your cryptocurrencies wallet</string>
    <string name="terms_text">Terms</string>
    <string name="agree_caption_button">Agree</string>
    <string name="terms_content">Terms content</string>
    <string name="wallet_title">Wallet</string>
    <string name="operation_title">Operations</string>
    <string name="history_title">History</string>
    <string name="settings_title">Settings</string>
    <string name="indications_restore_words_text">Please enter your 12 words</string>
    <string name="seed_words_text">12 words</string>
    <string name="pin_digit" translatable="false">PIN digit</string>
    <string name="pad_1_text" translatable="false">1</string>
    <string name="pad_2_text" translatable="false">2</string>
    <string name="pad_3_text" translatable="false">3</string>
    <string name="pad_4_text" translatable="false">4</string>
    <string name="pad_5_text" translatable="false">5</string>
    <string name="pad_6_text" translatable="false">6</string>
    <string name="pad_7_text" translatable="false">7</string>
    <string name="pad_8_text" translatable="false">8</string>
    <string name="pad_9_text" translatable="false">9</string>
    <string name="pad_0_text" translatable="false">0</string>
    <string name="balance_fiat_sample_text" translatable="false">1,000,000.00</string>
    <string name="fiat_sign" translatable="false">$</string>
    <string name="error_to_restore_title">Fail to restore</string>
    <string name="error_to_create_title">Fail to create</string>
    <string name="error_to_restore_message">An error occurred while restoring the wallet, please try again later</string>
    <string name="error_to_create_message">An error occurred while creating the new wallet, please try again later</string>
    <string name="request_money_title">Request money</string>
    <string name="request_money_description">Please scan this QR code  to send money</string>
    <string name="share_text">Share</string>
    <string name="wallet_address_text">Wallet address</string>
    <string name="address_copy_to_clipboard_text">Address copied to clipboard</string>
    <string name="share_title">Share request money</string>
    <string name="bitcoin_text" translatable="false">Bitcoin</string>
    <string name="usd_text">United States dollar</string>
    <string name="mxn_text">Mexican peso</string>
    <string name="backup_summary_text">Get the words used to restore the wallet on other devices</string>
    <string name="pin_summary">Allows you to replace the wallet authentication PIN</string>
    <string name="delete_summary">Allows you to delete the wallet. This option is irreversible</string>
    <string name="configure_2fa_title">Two-Factor Authentication</string>
    <string name="qrcode_2fa_description">Two-Factor Authentication QR</string>
    <string name="secret_phrase_summary">if can\'t scan the QR code, please use the next secret phrase</string>
    <string name="code_generated_text">Code generated by authenticator app</string>
    <string name="register_text">Register</string>
    <string name="secret_phrase_sample" translatable="false">OQB6ZZGYHCPSX4AK</string>
    <string name="error_msg_auth_code">Authentication code is not valid</string>
    <string name="secret_phrase_text">Secret phrase</string>
    <string name="phrase_copy_to_clipboard_text">Secret phrase copied to clipboard</string>
    <string name="deleting_title">Deleting</string>
    <string name="delete_text">Delete</string>
    <string name="delete_warn">This option is irreversible. Make sure you have obtained the 12 words to be able to restore later to the deletion of this wallet.</string>
    <string name="icon_description">CryptoAsset\'s icon</string>
    <string name="destination_data_text">Destination data</string>
    <string name="amount_pattern">Amount %s</string>
    <string name="fee_type_text">Fee type</string>
    <string name="fee_by_kb_pattern">%s by KB</string>
    <string name="total_fee_text">Fee</string>
    <string name="total_to_pay_text">Amount to pay</string>
    <string name="pay_text">Pay</string>
    <string name="error_invalid_address">Invalid address</string>
    <string name="camera_permission_error">Require camera permission</string>
    <string name="request_text">Request</string>
    <string name="qr_from_file_text">Scan from a file</string>
    <string name="is_dust_error">Amout is dust</string>
    <string name="max_value_error">The amount cannot be greater than %s</string>
    <string name="multi_addresses_text">(Multiple addresses)</string>
    <string name="coinbase_address">(New coins)</string>
    <string name="tx_hash_sample" translatable="false">a1cbbcc70c2565e9730d2a2f62c39573a470de4d596a176ba50ba272e37bb99a</string>
    <string name="address_sample" translatable="false">msyfBnf2pTwXc6uTHXH7yKyq5MK1ggq8C8</string>
    <string name="summary_text">Summary</string>
    <string name="id_text" translatable="false">ID</string>
    <string name="block_text">Block</string>
    <string name="blockhash_text" translatable="false">Hash</string>
    <string name="blockhash_sample_text" translatable="false">0000000000000000001139feb52b3eac11284ddbd326f29184c520d430a5c412</string>
    <string name="blockheight_text">Height</string>
    <string name="blockheight_sample_text" translatable="false">502,125</string>
    <string name="confirmations_sample_text" translatable="false">150</string>
    <string name="inputs_text">Inputs</string>
    <string name="outputs_text">Outputs</string>
    <string name="size_text">Size</string>
    <string name="size_sample_text" translatable="false">197 B</string>
    <string name="status_text">Status</string>
    <string name="mempool_status_text">In mempool</string>
    <string name="confirmed_status_text">Confirmed</string>
    <string name="unconfirmed_status_text">Unconfirmed</string>
    <string name="error_to_initialize_title">Fail to initialize</string>
    <string name="error_to_initialize_message">An error occurred while initializing the wallet, please try again later</string>
    <string name="from_text">From</string>
    <string name="to_text">To</string>
    <string name="authenticator_2fa_title">Authentication 2-Factors</string>
    <string name="authenticate_text">Authenticate</string>
    <string name="fee_error">Your custom fee isn\'t valid</string>
    <string name="successful_payment_pattern">Your payment of %s was successful</string>
    <string name="share_successful_payment_title">Share successful payment</string>
    <string name="fail_to_send_tx_error">Fail to send a transaction, try again</string>
    <string name="default_notification_channel_id" translatable="false">cryptowallet_notifications</string>
    <string name="receive_notification_channel_name">Receiving payments</string>
</resources>