<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2020. Criptoactivo
  ~ Copyright © 2020. InnSy Tech
  ~ Copyright © 2020. Ing. Javier de Jesús Flores Mondragón
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="24dp"
    android:theme="?attr/bottomSheetDialogTheme">

    <ImageView
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/icon_description"
        android:src="@drawable/ic_sucessful"
        android:tint="?attr/colorPrimaryDark" />

    <TextView
        android:id="@+id/mSuPayMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/successful_payment_pattern"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_text"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="?attr/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/id_text"
            android:textAppearance="?attr/textAppearanceSubtitle2" />

        <TextView
            android:id="@+id/mSuPayId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_hash_sample"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total_fee_text"
            android:textAppearance="?attr/textAppearanceSubtitle2" />

        <TextView
            android:id="@+id/mSuPayFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_sample_text"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/to_text"
            android:textAppearance="?attr/textAppearanceSubtitle2" />

        <TextView
            android:id="@+id/mSuPayTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_sample"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/size_text"
            android:textAppearance="?attr/textAppearanceSubtitle2" />

        <TextView
            android:id="@+id/mSuPaySize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_sample_text"
            android:textAppearance="?attr/textAppearanceBody2" />

        <Button
            android:id="@+id/mSuPayShareButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/share_text" />

    </LinearLayout>

</LinearLayout>
