<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2020. Criptoactivo
  ~ Copyright © 2020. InnSy Tech
  ~ Copyright © 2020. Ing. Javier de Jesús Flores Mondragón
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".app.TransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mTxIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/icon_description"
                android:src="@mipmap/ic_bitcoin" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mTxAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_sample_text"
                    android:textAppearance="?attr/textAppearanceHeadline4"
                    android:textColor="?attr/colorReceivedTx" />

                <TextView
                    android:id="@+id/mTxFiatAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fiat_sample_text"
                    android:textAppearance="?attr/textAppearanceSubtitle1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_text"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?attr/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/id_text"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/mTxId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_hash_sample"
                android:textAppearance="?attr/textAppearanceCaption" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/datetime_text"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/mTxDatetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datetime_sample_text"
                android:textAppearance="?attr/textAppearanceCaption" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_fee_text"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/mTxFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_sample_text"
                android:textAppearance="?attr/textAppearanceCaption" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/size_text"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/mTxSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_sample_text"
                android:textAppearance="?attr/textAppearanceCaption" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/status_text"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/mTxStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mempool_status_text"
                android:textAppearance="?attr/textAppearanceCaption" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mTxBlockInfo"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/block_text"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?attr/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/blockhash_text"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/mTxBlockHash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blockhash_sample_text"
                android:textAppearance="?attr/textAppearanceCaption" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/blockheight_text"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/mTxBlockHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blockheight_sample_text"
                android:textAppearance="?attr/textAppearanceCaption" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/confirmations_text"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/mTxConfirmations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmations_sample_text"
                android:textAppearance="?attr/textAppearanceCaption" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickedInputs"
                android:text="@string/inputs_text"
                app:icon="@drawable/ic_receive" />

            <Button
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickedOutputs"
                android:text="@string/outputs_text"
                app:icon="@drawable/ic_send" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>