<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2020. Criptoactivo
  ~ Copyright © 2020. InnSy Tech
  ~ Copyright © 2020. Ing. Javier de Jesús Flores Mondragón
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="24dp"
    android:theme="?attr/bottomSheetDialogTheme">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_money_title"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <TextView
        android:id="@+id/mReceInfoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:text="@string/request_money_description"
        android:textAppearance="?attr/textAppearanceBody1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mReceInfoQrCode"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/qr_receive_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mSendIcon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icon_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rectangle_rounded"
        android:backgroundTint="@color/sl_color_primary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mReceInfoAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="middle"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:text="@string/address_sample"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

        <Button
            android:id="@+id/mReceInfoCopyButton"
            style="?attr/iconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="@null"
            app:icon="@drawable/ic_copy"
            app:iconTint="?attr/colorPrimary" />

    </LinearLayout>

    <Button
        android:id="@+id/mReceInfoShareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/share_text" />

</LinearLayout>
